tests/ui/impl-trait/in-bindings/nesting-lifetime-failure.stderr
error[E0597]: `local` does not live long enough
  --> $DIR/nesting-lifetime-failure.rs:8:53
   |
LL |     let local = 0;
   |         ----- binding `local` declared here
LL |     let _: impl IntoIterator<Item = impl Static> = [&local];
   |            -------------------------------------    ^^^^^^ borrowed value does not live long enough
   |            |
   |            type annotation requires that `local` is borrowed for `'static`
LL |
LL | }
   | - `local` dropped here while still borrowed

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0597`.
